--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,7 @@
 	<url>http://maven.apache.org</url>
 
 	<properties>
-		<springframework.webmvc.version>3.2.3.RELEASE</springframework.webmvc.version>
-
-		<springframework.version>3.2.2.RELEASE</springframework.version>
+		<springframework.version>3.2.3.RELEASE</springframework.version>
 		<springframework.date.version>1.3.2.RELEASE</springframework.date.version>
 		<springframework.security.version>3.1.4.RELEASE</springframework.security.version>
 
@@ -25,7 +23,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-webmvc</artifactId>
-			<version>${springframework.webmvc.version}</version>
+			<version>${springframework.version}</version>
 		</dependency>
 
 		<dependency>
