--- a/pom.xml
+++ b/pom.xml
@@ -179,6 +179,12 @@
 			<version>3.1.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>javax.servlet.jsp</groupId>
+			<artifactId>jsp-api</artifactId>
+			<version>2.2.1-b03</version>
+		</dependency>
+
 	</dependencies>
 
 	<repositories>
