更新前端框架。

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -41,11 +41,28 @@
 		
 		<load-on-startup>1</load-on-startup>
 	</servlet>
+	
+	<!-- <servlet-mapping>   
+    	<servlet-name>default</servlet-name>  
+    	<url-pattern>*.jpg</url-pattern>     
+	</servlet-mapping>    
+	
+	<servlet-mapping>       
+    	<servlet-name>default</servlet-name>    
+    	<url-pattern>*.js</url-pattern>    
+	</servlet-mapping>  
+	  
+	<servlet-mapping>        
+    	<servlet-name>default</servlet-name>       
+    	<url-pattern>*.css</url-pattern>      
+	</servlet-mapping> -->
 
 	<servlet-mapping>
 		<servlet-name>springMVC</servlet-name>
 		<url-pattern>/</url-pattern>
 	</servlet-mapping>
+	
+	
 	
 	<filter>  
         <filter-name>encodingFilter</filter-name>  
@@ -90,8 +107,8 @@
 	</session-config>
 	
 	<welcome-file-list>
-		<welcome-file>index.jsp</welcome-file>
-		<welcome-file>index.html</welcome-file>
+		<welcome-file>default.jsp</welcome-file>
+		<welcome-file>default.html</welcome-file>
 	</welcome-file-list>
 	
   	<display-name>Archetype Created Web Application</display-name>
