--- a/pom.xml
+++ b/pom.xml
@@ -221,6 +221,12 @@
 			<version>14.0</version>
 		</dependency>
 
+		<dependency>
+			<groupId>commons-fileupload</groupId>
+			<artifactId>commons-fileupload</artifactId>
+			<version>1.3</version>
+		</dependency>
+
 		<!-- <dependency> <groupId>org.jodd</groupId> <artifactId>jodd</artifactId> 
 			<version>3.4.1</version> </dependency> -->
 
