--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -42,7 +42,7 @@
         <param-name>contextConfigLocation</param-name>
         <param-value>
             classpath:applicationContext.xml,
-            <!-- classpath:applicationContext-security.xml -->
+            classpath:applicationContext-security.xml
         </param-value>
     </context-param>
 
@@ -75,6 +75,10 @@
     <servlet-mapping>
         <servlet-name>default</servlet-name>
         <url-pattern>*.png</url-pattern>
+    </servlet-mapping>
+    <servlet-mapping>
+        <servlet-name>default</servlet-name>
+        <url-pattern>*.ico</url-pattern>
     </servlet-mapping>
     <servlet-mapping>
         <servlet-name>default</servlet-name>
@@ -121,10 +125,18 @@
     </filter-mapping>
 
     <!-- 配置Spring Security start -->
-    <!-- <filter> <filter-name>springSecurityFilterChain</filter-name> <filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
-        </filter> <filter-mapping> <filter-name>springSecurityFilterChain</filter-name>
-        <url-pattern>/*</url-pattern> </filter-mapping> -->
+    <filter>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<filter-class>org.springframework.web.filter.DelegatingFilterProxy</filter-class>
+	</filter>
+	
+	<filter-mapping>
+		<filter-name>springSecurityFilterChain</filter-name>
+		<url-pattern>/*</url-pattern>
+	</filter-mapping>
     <!-- 配置Spring Security end -->
+    
+    
 
     <!-- 防止多人登陆 ,控制一个用户只能登录一次，不能在其他地方重新登录 -->
     <!-- <listener> <listener-class> org.springframework.security.web.session.HttpSessionEventPublisher
