--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 #jdbc driver
 driverClassName=com.mysql.jdbc.Driver
-url=jdbc:mysql://localhost:3306/train_pro
+url=jdbc:mysql://localhost:3306/train_pro?zeroDateTimeBehavior=convertToNull
 username=root
-password=5201314
+password=3793a2e7
 
 #log4jdbc driver
 log4jdbc_driverClassName=net.sf.log4jdbc.DriverSpy
