--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
 		<springframework.version>4.0.2.RELEASE</springframework.version>
 		<springframework.date.version>1.4.3.RELEASE</springframework.date.version>
 		<springframework.security.version>3.2.0.RELEASE</springframework.security.version>
-		<hibernate.version>4.3.1.Final</hibernate.version>
+		<hibernate.version>4.3.4.Final</hibernate.version>
 
 		<javassist.version>3.18.1-GA</javassist.version>
 
@@ -306,7 +306,7 @@
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>3.0</version>
+					<version>3.1</version>
 					<configuration>
 						<source>1.7</source>
 						<target>1.7</target>
@@ -324,7 +324,9 @@
 				</plugin>
 
 				<plugin>
+					<groupId>org.apache.maven.plugins</groupId>
 			        <artifactId>maven-antrun-plugin</artifactId>
+			        <version>1.7</version>
 			        <executions>
 			          <execution>
 			          	<id>process-classes</id>
@@ -343,8 +345,8 @@
 			              </classpath>
 			            </taskdef>
 			            <instrument verbose="true">
-			              <fileset dir="${project.build.directory}">
-			                <include name="**/domain/*.class" />
+			              <fileset dir="${project.build.directory}/com/iokays/article/domain">
+			                <include name="Article.class" />
 			              </fileset>
 			            </instrument>
 			          </tasks>
